src/test/should-compile/index-bounds.fuse

decl a: bit<32>[10];

for (let i = 0..10) {
  a[i] := 0;
}
