src/test/should-fail/index-bounds.fuse

decl a: bit<32>[10];

for (let i = 0..11) {
  a[i] := 0;
}
